<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/homeFragment"
            android:enabled="true"
            android:icon="@drawable/home_ic"
            android:title="@string/news"
            android:tooltipText="@string/news"
            app:labelVisibilityMode="auto"
            tools:ignore="UnusedAttribute" />

        <item
            android:id="@+id/attackFragment"
            android:enabled="true"
            android:icon="@drawable/terrorist_ic"
            android:title="@string/outbreaks"
            android:tooltipText="@string/outbreaks"
            app:labelVisibilityMode="auto"
            tools:ignore="UnusedAttribute" />

        <item
            android:id="@+id/scandals"
            android:enabled="true"
            android:icon="@drawable/scandal_ic"
            android:title="@string/product_alert"
            android:tooltipText="@string/product_alert"
            app:labelVisibilityMode="auto"
            tools:targetApi="o" />

        <item
            android:id="@+id/murderFragment"
            android:enabled="true"
            android:icon="@drawable/murder_ic"
            android:title="@string/feature_stories"
            android:tooltipText="@string/feature_stories"
            app:labelVisibilityMode="auto"
            tools:ignore="UnusedAttribute" />

        <item
            android:id="@+id/inventions"
            android:enabled="true"
            android:icon="@drawable/inventions_ic"
            android:title="@string/emergency_news"
            android:tooltipText="@string/emergency_news"
            app:labelVisibilityMode="auto"
            tools:ignore="UnusedAttribute" />

    </group>

</menu>