<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    android:background="@drawable/elavation_background"
    android:elevation="5dp"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <LinearLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/elavation_background"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="1dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageLeft"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/disease_place_holder"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:padding="3dp"
                android:text="@string/title_of_the_disease"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publication_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:padding="3dp"
                android:text="@string/publication_date"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/description"
        android:textSize="12sp" />

</LinearLayout>



