<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    android:background="@drawable/elavation_background"
    android:elevation="5dp"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <LinearLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/elavation_background"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="1dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/emergencyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:padding="3dp"
                android:text="@string/title_of_the_disease"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emergencyPublicationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:padding="3dp"
                android:text="@string/publication_date"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageView
            android:id="@+id/emergencyImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/siren"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/emergencyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/description"
        android:textSize="12sp" />

</LinearLayout>



